--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:raxif.helloWorld"
+		"onCommand:raxif.format"
 	],
-	"main": "./out/extension.js",
+	"main": "./outDir/extension.js",
 	"contributes": {
 		"menus": {
 			"editor/context": [
@@ -26,7 +26,7 @@
 		"commands": [
 			{
 				"command": "raxif.format",
-				"title": "Hello World"
+				"title": "RaxIf Format"
 			}
 		]
 	},
@@ -39,18 +39,18 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.60.0",
+		"@babel/core": "^7.15.5",
+		"@babel/plugin-syntax-jsx": "^7.14.5",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.2.2",
 		"@types/node": "14.x",
-		"eslint": "^7.27.0",
+		"@types/vscode": "^1.60.0",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
+		"eslint": "^7.27.0",
 		"glob": "^7.1.7",
 		"mocha": "^8.4.0",
 		"typescript": "^4.3.2",
-		"vscode-test": "^1.5.2",
-		"@babel/core": "^7.15.5",
-    "@babel/plugin-syntax-jsx": "^7.14.5"
+		"vscode-test": "^1.5.2"
 	}
 }
