--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,25 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es6",
-		"outDir": "out",
+		"outDir": "./outDir",
+		"allowJs": true,
 		"lib": [
 			"es6"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
+		"strict": true,   /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
+		// "noImplicitAny": false
 	},
 	"exclude": [
 		"node_modules",
 		".vscode-test"
+	],
+	"include": [
+		"src/**/*"
 	]
 }
