--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es6",
-		"outDir": "./outDir",
+		"outDir": "./out",
 		"allowJs": true,
 		"lib": [
 			"es6"
