--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
 		"mocha": "^8.4.0",
 		"typescript": "^4.3.2",
 		"vscode-test": "^1.5.2"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pws019/raxif.git"
 	}
 }
