--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "raxif",
 	"displayName": "RaxIf",
-	"publisher":"dabai2",
+	"publisher": "dabai2",
 	"description": "",
 	"version": "0.0.1",
 	"engines": {
@@ -39,9 +39,11 @@
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js"
 	},
-	"devDependencies": {
+	"dependencies": {
 		"@babel/core": "^7.15.5",
-		"@babel/plugin-syntax-jsx": "^7.14.5",
+		"@babel/plugin-syntax-jsx": "^7.14.5"
+	},
+	"devDependencies": {
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.2.2",
 		"@types/node": "14.x",
